--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ default: &default
 
 development:
   <<: *default
-  database: 'magic_info_development'
+  database: magic_info_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
